--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,7 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - Vicondrus
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - machine-teaching-group/tmlr2024_neurtasksyn
